# ryokai

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml
eval/: run_wmt25_grid.py
pymeant/: __init__.py  _langs.py  cli.py  eval.py  graph.py  labelconfig.py  scorer.py  stopwords.py
pymeant/data/: stopwords.yaml
pymeant/sim/: __init__.py  contextual.py  embeddings.py  static.py
pymeant/srl/: hf_backend.py  hf_pos.py
ryokai/: __init__.py  _langs.py  cli.py  eval.py  labelconfig.py  match.py  scorer.py  stopwords.py
ryokai/data/: labelconfig.yaml
ryokai/sim/: contextual.py
ryokai/srl/: __init__.py  hf_pos.py
tests/: test_api.py  test_bertscore.py  test_contextual_aligner.py  test_distortion_layer.py  test_eval.py  test_labelconfig.py  test_languages.py  test_match.py  test_presets.py  test_readme_examples.py  test_scorer_nosrl.py  test_scorer_unit.py  test_static_backend.py  test_stopwords.py
