[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymeant"
version = "0.1.0"
description = "Python port of MEANT 2.0 — semantic-frame MT evaluation metric using HuggingFace transformers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Liling Tan" }]
keywords = ["machine-translation", "evaluation", "meant", "srl", "semantic-roles", "huggingface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "scipy>=1.10",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-xdist"]
dev  = ["pytest>=7", "pytest-xdist", "ruff", "build", "twine"]

[project.scripts]
pymeant = "pymeant.cli:main"

[project.urls]
Homepage = "https://github.com/alvations/pymeant"
Repository = "https://github.com/alvations/pymeant"
Issues = "https://github.com/alvations/pymeant/issues"

[tool.setuptools]
packages = ["pymeant", "pymeant.srl", "pymeant.sim"]
include-package-data = true

[tool.setuptools.package-data]
pymeant = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download HF / stanza models (deselect with -m 'not slow')",
]
