[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ryokai"
version = "0.1.0"
description = "了解 — unified semantic MT evaluation: MEANT, XMEANT, YiSi, WOLVESAAR, and SimAlign-style word alignment over modern multilingual embeddings."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Liling Tan" }]
keywords = [
    "machine-translation",
    "evaluation",
    "metric",
    "meant",
    "xmeant",
    "yisi",
    "wolvesaar",
    "simalign",
    "word-alignment",
    "semantic-roles",
    "huggingface",
    "multilingual",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "scipy>=1.10",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-xdist"]
dev  = ["pytest>=7", "pytest-xdist", "ruff", "build", "twine"]

[project.scripts]
ryokai = "ryokai.cli:main"

[project.urls]
Homepage = "https://github.com/alvations/ryokai"
Repository = "https://github.com/alvations/ryokai"
Issues = "https://github.com/alvations/ryokai/issues"

[tool.setuptools]
packages = ["ryokai", "ryokai.srl", "ryokai.sim"]
include-package-data = true

[tool.setuptools.package-data]
ryokai = ["data/*.yaml", "data/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download HF models (deselect with -m 'not slow')",
]
